Bug 130196 - Changing nav-order in navigator does not work on single page
Summary: Changing nav-order in navigator does not work on single page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2020-01-25 18:33 UTC by Regina Henschel
Modified: 2025-10-23 20:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File with named shapes to test Navigator (11.73 KB, application/vnd.oasis.opendocument.presentation)
2020-01-25 18:33 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-01-25 18:33:16 UTC
Created attachment 157425 [details]
File with named shapes to test Navigator

Error: Changing nav-order in Navigator does not work, if only one page exists.

To reproduce the error:

Open attached document.
Open the navigator as floating window by pressing Ctrl+Shift+F5.
Go back to main window, but keep Navigator open.
Press Tab-key several times.
Notice, that the order of the shapes in the Navigator is the same as the order in which the tab key goes through the shapes.

Now try to drag the "Rectangle" shape before the "Triangle" shape or to any other position in the Navigator. You will always see a 'forbidden' sign.

Insert a second page.

Now try again to drag the "Rectangle" shape before the "Triangle" shape. Now it works.

Go back to main window, but keep Navigator open.

Press Tab-key several times. Notice, that the order in which the tab key goes through the shapes corresponds to the changed order in the navigator. So changing nav-order via Navigator works in principle, but not if only one page exists.
Comment 1 V Stuart Foote 2020-01-26 04:46:14 UTC
Confirmed with STR on
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 07b1159b79135857dd9a450c3bb9ae0a944ebcf9
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 2 Gerhard Weydt 2021-02-15 14:29:06 UTC
Confirmed in:
Version: 7.1.0.2 (x64) / LibreOffice Community
Build ID: 53d68d29d90fd16448721a60aad68c28ff0809f5
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 3 BogdanB 2023-12-05 05:42:02 UTC
Regina, please try again to reproduce this bug. It's WFM in my case.

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bc95ece0618b9886890d9c758b9d0ebc0fc41c69
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Regina Henschel 2023-12-05 10:45:09 UTC
The error exists still as described. To reproduce the error it is important that you do not use the Navigator in the Sidebar, but use the separate floating Navigator you get with Ctrl+Shift+F5.

Tested with Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 43967453e15e1d054972a7586cfef8f8e0866270
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 5 BogdanB 2023-12-06 19:24:22 UTC
OK, Regina, I retested, it's a Windows only bug. Working well even with that Navigator.
Comment 6 Jim Raykowski 2025-10-18 23:28:09 UTC
Hi all,

Hope I'm on track with what is being asked. I've submitted a patch to fix this.

https://gerrit.libreoffice.org/c/core/+/192657

Learned a bit more about how LO dnd works by doing this.
Comment 7 Commit Notification 2025-10-23 20:03:30 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1fd897efbb573464e5d8197ece4003736c7b69f9

tdf#130196 sd_navigator: show correct icon when dnd nav-ordering

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Jim Raykowski 2025-10-23 20:05:05 UTC
Setting this to Resolved Fixed. Please reopen if I've missed what is being asked.