tdf#130196 sd_navigator: show correct icon when dnd nav-ordering

For x11 a no drop icon was shown for single page documents when nav-
ordering objects by dnd in the Navigator objects tree.

Change-Id: If84b34a764527db57d9645ec7d23c8b1d4c10942
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192657
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>